# luigine

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  setup.py  template.py
example_working_dir/INPUT/: luigi.cfg  param.py
src/luigine/: __init__.py  abc.py  utils.py
