[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luigine"
version = "1.4.1"
authors = [
    { name = "Hiroshi Kajino", email = "hiroshi.kajino.1989@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "dill",
    "luigi>=2.8.11",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "s3path",
]

[project.urls]
Homepage = "https://github.com/kanojikajino/luigine"

[tool.hatch.build.targets.wheel]
packages = ["src/luigine"]

[tool.uv]
exclude-newer = "1 week"